<resources>
    <string name="app_name">MovieDB</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="log_in_label">Log in</string>
    <string name="edit_text_name">Enter your name</string>
    <string name="edit_text_password">Enter your password</string>
    <string name="register_label">Register</string>
    <string name="confirm_password">Confirm password</string>
</resources>
