<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterFragment">

    <!-- TODO: Update blank fragment layout -->
    <TextView
        android:id="@+id/register_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:layout_marginStart="50dp"
        android:text="@string/register_label"
        android:textSize="40sp"
        android:textColor="@color/colorPrimary"
        android:textStyle="bold"/>

    <EditText
        android:id="@+id/edit_name1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="200dp"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        android:hint="@string/edit_text_name"
        android:inputType="textPersonName"/>

    <EditText
        android:id="@+id/edit_password1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="300dp"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        android:hint="@string/edit_text_password"
        android:inputType="textPassword"/>

    <EditText
        android:id="@+id/edit_confirm_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="400dp"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        android:hint="@string/confirm_password"
        android:inputType="textPassword"/>

    <Button
        android:id="@+id/register1_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register_label"
        android:layout_marginTop="500dp"
        android:layout_marginStart="140dp" />

</FrameLayout>